# portainer-mcp

./: .env.example  .gitignore  README.md  glama.json  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml
src/portainer_mcp/: client.py  config.py  errors.py  server.py
src/portainer_mcp/tools/: auth.py  containers.py  endpoints.py  images.py  networks.py  stacks.py  system.py  users.py  volumes.py
tests/: conftest.py  test_client.py  test_config.py  test_helpers.py  test_parse_stream.py  test_server.py  test_tools_integration.py
